<resources>
    <string name="app_name">Travellet</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>

    <!--  정리 필요함  -->
    <string name="sign_in">Sign In</string>
    <string name="e_mail">E-mail</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="password">Password</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="sign_up">Sign Up!</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="ok">OK</string>
    <string name="back">back</string>
    <string name="progress">progress</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in2">Sign In!</string>
    <string name="next">NEXT</string>
    <string name="sign_up1">Sign Up</string>
    <string name="username">Username</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="country">Country</string>
    <string name="please_select_your_country">Please select your country</string>
    <string name="what">What</string>
    <string name="is_your_travel_title">Is Your Travel Title?</string>
    <string name="please_enter_a_travel_title">Please enter a travel title</string>
    <string name="when">When</string>
    <string name="do_you_travel">Do you Travel?</string>
    <string name="how_much">How Much</string>
    <string name="is_your_total_budget">Is Your Total Budget?</string>
    <string name="please_enter_the_budget">Please enter the budget (￦)</string>
    <string name="like">like</string>
    <string name="place">place</string>
    <string name="more">MORE</string>
    <string name="contact_info">Contact Info</string>
    <string name="tell">Tell</string>
    <string name="address">Address</string>
    <string name="more_info">MORE INFO</string>
    <string name="memo">Memo</string>
    <string name="lodging">Lodging</string>
    <string name="food">Food</string>
    <string name="add">ADD</string>
    <string name="krw">KRW</string>
    <string name="usd">usd</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="dot">.</string>
    <string name="del">del</string>
    <string name="setting">Setting</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit">Edit</string>
    <string name="search_the_place">Search the place</string>
    <string name="place_thumbnail">Place thumbnail</string>
    <string name="like_button">Like button</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="saturday">Saturday</string>
    <string name="distribute_the_remaining_budget">Distribute the remaining budget.</string>
    <string name="budget">Budget</string>
    <string name="expense">Expense</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="etc">Etc.</string>
    <string name="transport">Transport</string>
    <string name="tourism">Tourism</string>
    <string name="shopping">Shopping</string>
    <string name="cash">Cash</string>
    <string name="change_currency">Change Currency</string>
    <string name="transportation">Transportation</string>
    <string name="etc2">Etc.</string>
</resources>
