<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".SignUp1Activity">

    <androidx.appcompat.widget.Toolbar
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/backButton"
            android:layout_margin="16dp"
            android:background="@drawable/backspace_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/back" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_signup_1_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:contentDescription="@string/progress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:text="@string/sign_up1"
        android:fontFamily="@font/rubik_medium"
        android:textSize="28sp"
        android:textColor="#323643"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text1"
        android:layout_marginTop="60dp"
        android:layout_marginStart="24dp"
        android:text="@string/e_mail"
        android:textSize="14sp"
        android:textColor="@color/six_grey"
        android:fontFamily="@font/noto_sans_regular"
        android:letterSpacing="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailText"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/please_enter_your_email"
        android:textColorHint="@color/hint_grey"
        android:backgroundTint="@color/hint_grey"
        android:textStyle="normal"
        android:textSize="16sp"
        android:fontFamily="@font/noto_sans_demilight"
        android:letterSpacing="0.03"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:text="@string/password"
        android:textSize="14sp"
        android:textColor="@color/six_grey"
        android:fontFamily="@font/noto_sans_regular"
        android:letterSpacing="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/pwText"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:hint="@string/please_enter_your_password"
        android:textColorHint="@color/hint_grey"
        android:backgroundTint="@color/hint_grey"
        android:textStyle="normal"
        android:textSize="16sp"
        android:fontFamily="@font/noto_sans_demilight"
        android:letterSpacing="0.03"
        app:layout_constraintTop_toBottomOf="@+id/text2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:autofillHints=""
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text3"
        android:layout_marginBottom="16dp"
        android:textSize="12sp"
        android:textColor="@color/icon_grey"
        android:letterSpacing="0.03"
        android:text="@string/already_have_an_account"
        android:fontFamily="@font/noto_sans_regular"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintRight_toLeftOf="@+id/signInButton"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="3dp"
        android:letterSpacing="0.03"
        android:text="@string/sign_in2"
        android:textColor="@color/light_blue"
        android:textSize="12sp"
        android:fontFamily="@font/noto_sans_regular"
        app:layout_constraintBottom_toTopOf="@+id/nextButton"
        app:layout_constraintLeft_toRightOf="@+id/text3"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:id="@+id/nextButton"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/gradation"
        android:stateListAnimator="@null"
        android:text="@string/next"
        android:textColor="@color/white"
        android:letterSpacing="0.03"
        android:fontFamily="@font/noto_sans_medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>