<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/_1"
        android:textAlignment="center"
        android:textColor="@color/icon_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button2"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/_2"
        android:textAlignment="center"
        android:textColor="@color/icon_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button3"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/_3"
        android:textAlignment="center"
        android:textColor="@color/icon_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button4"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/_4"
        android:textAlignment="center"
        android:textColor="@color/icon_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button5"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/_5"
        android:textAlignment="center"
        android:textColor="@color/icon_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button6"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/_6"
        android:textAlignment="center"
        android:textColor="@color/icon_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button7"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/_7"
        android:textAlignment="center"
        android:textColor="@color/icon_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button8"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/_8"
        android:textAlignment="center"
        android:textColor="@color/icon_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button9"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/_9"
        android:textAlignment="center"
        android:textColor="@color/icon_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_remove"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <Button
        android:id="@+id/button_dot"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/dot"
        android:textAlignment="center"
        android:textColor="@color/icon_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button0"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:stateListAnimator="@null"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textColor="@color/icon_grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_remove"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <ImageButton
        android:id="@+id/button_remove"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        app:srcCompat="@drawable/ic_input_remove_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>