<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".feature.sign.SignUp2Activity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/include_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_signup2_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:contentDescription="@string/progress" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:text="@string/sign_up1"
        android:textSize="28sp"
        android:textColor="@color/soft_black"
        android:fontFamily="@font/rubik_medium"
        android:includeFontPadding="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="24dp"
        android:text="@string/username"
        android:textColor="@color/icon_grey"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:letterSpacing="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>

    <EditText
        android:id="@+id/edit_text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:background="@drawable/bg_underline_vaild_success"
        android:fontFamily="@font/noto_sans_demilight"
        android:hint="@string/please_enter_your_name"
        android:includeFontPadding="false"
        android:inputType="text"
        android:letterSpacing="0.03"
        android:textColor="@color/four_grey"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:text="@string/country"
        android:textColor="@color/icon_grey"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:letterSpacing="0.03"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name"/>

    <Button
        android:id="@+id/button_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:background="@drawable/bg_underline_vaild_success"
        android:fontFamily="@font/noto_sans_demilight"
        android:hint="@string/please_select_your_country"
        android:includeFontPadding="false"
        android:letterSpacing="0.03"
        android:textColor="@color/four_grey"
        android:textColorHint="@color/hint_grey"
        android:textSize="16sp"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/already_have_an_account"
        android:textSize="12sp"
        android:textColor="@color/icon_grey"
        android:fontFamily="@font/noto_sans_regular"
        android:includeFontPadding="false"
        android:letterSpacing="0.03"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/button_ok"
        app:layout_constraintRight_toLeftOf="@+id/button_sign_in"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:fontFamily="@font/noto_sans_medium"
        android:includeFontPadding="false"
        android:letterSpacing="0.03"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:onClick="signInButtonClick"
        android:paddingStart="4dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:text="@string/sign_in2"
        android:textAllCaps="false"
        android:textColor="@color/deep_blue"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button_ok"
        app:layout_constraintLeft_toRightOf="@+id/text3"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_gradation"
        android:fontFamily="@font/noto_sans_medium"
        android:includeFontPadding="false"
        android:letterSpacing="0.03"
        android:onClick="okButtonClick"
        android:stateListAnimator="@null"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>